[package]
name = "buffett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.155", features = ["derive"] }
toml = "0.7.2"
