[package]
name = "buffett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.2.1"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.155", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.2"
