[package]
name = "buffett"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
chrono = { version = "0.4.24", features = ["serde"] }
csv = "1.2.1"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.155", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["sqlite", "macros", "migrate", "runtime-tokio-native-tls"] }
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.2"
